- Changed ctf-script-page's "main" style to "ctf-script-page-main" - Added a width value to code to prevent it from going off-screen - Made span display "inline-flex", to prevent unwanted new lines - Added a top margin to .ctf-script-page-main to add space between top navbar

--- a/src/routes/ctf-script/ctf-script-page.css
+++ b/src/routes/ctf-script/ctf-script-page.css
@@ -1,6 +1,12 @@
-.main {
+.ctf-script-page-main {
   width: 100vw;
   height: 75vh;
-  align-items: center;
+  margin-top: 25px;
   justify-content: center;
+}
+.script-container > pre > code {
+  width: 90vw;
+}
+span {
+  display: inline-flex;
 }
